open game connection; sdp answer; add/get ice candidate;
